move api calls to backend and removed cors

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <label for="employeeSize">Employee Size:</label>
         <input type="number" id="employeeSize" name="employeeSize" min="1" max="200" value="10">
         <br>
-        <button type="submit">Get Company and Employee Info</button>
+        <button id="getDataButton" type="submit">Get Company and Employee Info</button>
     </form>
 
     <script src="script.js"></script>
